# ToDoListWithCMake

./: CMakeLists.txt
forms/: ToDoList.qrc  ToDoList.ui
include/: Delegate.h  Model.h  ProxyModel.h  ToDoList.h
src/: Delegate.cpp  Model.cpp  ProxyModel.cpp  ToDoList.cpp
